k8s/cardsdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cardsdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cardsdb
  template:
    metadata:
      labels:
        app: cardsdb
    spec:
      containers:
        - name: cardsdb
          image: mysql:8
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: cardsdb-storage
              mountPath: /var/lib/mysql
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: cardsdb-storage
          persistentVolumeClaim:
            claimName: cardsdb-pvc
        - name: initdb
          configMap:
            name: cardsdb-init
---
apiVersion: v1
kind: Service
metadata:
  name: cardsdb
spec:
  selector:
    app: cardsdb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
