k8s/eurekaserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eurekaserver-deployment
  labels:
    app: eurekaserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eurekaserver
  template:
    metadata:
      labels:
        app: eurekaserver
    spec:
      containers:
        - name: eurekaserver
          image: artellas/eurekaserver:8
          ports:
            - containerPort: 8070
---
apiVersion: v1
kind: Service
metadata:
  name: eurekaserver
spec:
  selector:
    app: eurekaserver
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8070
      targetPort: 8070
