k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayserver-deployment
  labels:
    app: gatewayserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatewayserver
  template:
    metadata:
      labels:
        app: gatewayserver
    spec:
      containers:
        - name: gatewayserver
          image: artellas/gatewayserver:8
          ports:
            - containerPort: 8072
---
apiVersion: v1
kind: Service
metadata:
  name: gatewayserver
spec:
  selector:
    app: gatewayserver
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8072
      targetPort: 8072
