k8s/keycloakdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloakdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloakdb
  template:
    metadata:
      labels:
        app: keycloakdb
    spec:
      containers:
        - name: keycloakdb
          image: mysql:8
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: keycloakdb-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: keycloakdb-storage
          persistentVolumeClaim:
            claimName: keycloakdb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: keycloakdb
spec:
  selector:
    app: keycloakdb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
