k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bank.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gatewayserver
                port:
                  number: 8072
    - host: bank.auth
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
